remove to Java 8